--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,6 @@
 {% block body %}
 <div class="container text-center">
     <h2>Добро пожаловать!</h2>
-    <p class="lead">Это веб-придожение создано для того, чтобы вести блоги и писать статьи!</p>
+    <p class="lead">Это веб-приложение создано для того, чтобы вести блоги и писать статьи!</p>
 </div>
 {% endblock %}
