--- a/app/templates/article_data.html
+++ b/app/templates/article_data.html
@@ -8,8 +8,7 @@
     <h1>Название &#8212 {{title}}</h1></p>
     <p>
     <h3>{{text}}</h3></p>
-    <a href="/edit_article?id={{id}}&text={{text}}&author={{authors}}&title={{title}}"
-       method="post">
+    <a href="/edit_article?id={{id}}&text={{text}}&authors={{author}}&title={{title}}">
         <button type="button" class="btn btn-primary">Редактировать</button>
     </a>
 </div>
