--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -4,7 +4,7 @@
 <ul class="list-group">
     {% for article in our_articles %}
     <li class="list-group-item"><a
-            href="/article/?v1={{article.id}}&v2={{article.text}}&v3={{article.authors}}&v4={{article.title}}">
+            href="/article?v1={{article.id}}&v2={{article.text}}&v3={{article.authors}}&v4={{article.title}}">
         {{article.title}}</a></li>
     {% endfor %}
 </ul>
