--- a/app/templates/bar.html
+++ b/app/templates/bar.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Блог онлайн</a>
+            <a class="navbar-brand" href="/">Блог онлайн</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
